--- a/ping.gpr.in
+++ b/ping.gpr.in
@@ -1,10 +1,10 @@
-with "Ada_Drivers_Library/boards/stm32f769_discovery";
+with "Ada_Drivers_Library/boards/@BOARD_PROJECT@";
 with "anet_stm32fxxx";
 
 project Ping is
 
-   for Runtime ("Ada") use STM32F769_Discovery'Runtime("Ada");
-   for Object_Dir use "obj/stm32f769disco";
+   for Runtime ("Ada") use @BOARD_RUNTIME@'Runtime("Ada");
+   for Object_Dir use "obj/@BOARD_DIR@";
 
    for Main use ("ping.adb");
    for Source_Dirs use ("demos/ping", "demos/utils", "Ada_Drivers_Library/examples/shared/common/gui");
