--- a/ping.gpr.in
+++ b/ping.gpr.in
@@ -1,13 +1,13 @@
-with "Ada_Drivers_Library/boards/@BOARD_SUBDIR@/@BOARD_PROJECT@";
+with "@DRIVERS_PATH@/boards/@BOARD_SUBDIR@/@BOARD_PROJECT@";
 with "anet_stm32fxxx";
 
-project Ping extends "Ada_Drivers_Library/examples/shared/common/common.gpr" is
+project Ping extends "@DRIVERS_PATH@/examples/shared/common/common.gpr" is
 
    for Runtime ("Ada") use @BOARD_RUNTIME@'Runtime("Ada");
    for Object_Dir use "obj/@BOARD_DIR@";
 
    for Main use ("ping.adb");
-   for Source_Dirs use ("demos/ping", "demos/utils", "Ada_Drivers_Library/examples/shared/common/gui");
+   for Source_Dirs use ("demos/ping", "demos/utils", "@DRIVERS_PATH@/examples/shared/common/gui");
 
    package Compiler is
       --  The network packets are stored in the SDRAM and the SDRAM raises a hardware
