Update the GNAT project to allow custom path for Ada_Drivers_Library

--- a/anet_stm32fxxx.gpr.in
+++ b/anet_stm32fxxx.gpr.in
@@ -1,4 +1,4 @@
-with "Ada_Drivers_Library/boards/@BOARD_SUBDIR@/@BOARD_PROJECT@";
+with "@DRIVERS_PATH@/boards/@BOARD_SUBDIR@/@BOARD_PROJECT@";
 
 library project Anet_STM32FXXX  is
 
