Move STM32 driver to `drivers/enet_stm32/`
and wrap it as an Alire crate. Drop ADL dependency by providing
our-own copy of ethernet SVD file.

--- a/Makefile.in
+++ b/Makefile.in
@@ -39,7 +39,8 @@ flash-dns:		dns
 	st-flash write dns.bin 0x8000000
 
 checkout:
-	git submodule update --init --recursive
+	git clone https://github.com/AdaCore/Ada_Drivers_Library.git
+	git clone https://github.com/reznikmm/ethernet.git
 
 clean:
 	rm -rf obj ping.bin echo.bin dns.bin time.bin
