--- a/anet_stm32fxxx.gpr.in
+++ b/anet_stm32fxxx.gpr.in
@@ -7,7 +7,12 @@ library project Anet_STM32FXXX  is
    for Object_Dir use "obj/@BOARD_DIR@";
    for Runtime ("Ada") use @BOARD_RUNTIME@'Runtime("Ada");
 
-   for Source_Dirs use ("src", "src/stm32");
+   for Source_Dirs use
+    ("src",
+     "drivers/enet_stm32/src",
+     "drivers/enet_stm32/config",
+     "ethernet/source",
+     "src/stm32");
 
    package Compiler is
       --  The network packets are stored in the SDRAM and the SDRAM raises a hardware
