Add `ping_text_io` demo
It work on bare board runtime without Ada Drivers Library.

--- a/.github/workflows/alire.yml
+++ b/.github/workflows/alire.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Build project
       run: |
         alr build
-        # alr -C drivers/enet_stm32 build
+        alr -C demos/ping_text_io build
 
   Make:
     runs-on: ubuntu-latest
